# ban-teemo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LoLSeriesGames_2024_2025.csv  Makefile  README.md  main.py  player_roles_leaguepedia.json  player_roles_leaguepedia_full.json  pyproject.toml  render.yaml
backend/: pyproject.toml
backend/knowledge/: .gitkeep
backend/scripts/: build_duckdb.py  build_replay_metas.py  build_role_pick_phase.py  expand_archetype_data.py  fill_team_names.py  generate_archetype_data.py
backend/src/ban_teemo/: __init__.py  config.py  main.py
backend/src/ban_teemo/db/: __init__.py
backend/src/ban_teemo/llm/: __init__.py
backend/src/ban_teemo/models/: __init__.py  draft.py  recommendations.py  series_context.py  simulator.py  team.py
backend/src/ban_teemo/repositories/: __init__.py  draft_repository.py
backend/src/ban_teemo/services/: __init__.py  archetype_service.py  ban_recommendation_service.py  draft_quality_analyzer.py  draft_service.py  enemy_simulator_service.py  llm_reranker.py  pick_recommendation_engine.py  replay_manager.py  scoring_logger.py  series_context_builder.py  synergy_service.py  team_evaluation_service.py  web_search_client.py
backend/tests/: test_archetype_service.py  test_ban_recommendation_service.py  test_champion_roles.py  test_draft_quality_analyzer.py  test_enemy_simulator_service.py  test_flex_resolver.py  test_integration.py  test_llm_parsing.py  test_llm_reranker.py  test_llm_reranker_local.py  test_matchup_calculator.py  test_meta_scorer.py  test_pick_recommendation_engine.py  test_proficiency_scorer.py  test_recommendations_model.py  test_role_phase_scorer.py  test_series_context.py  test_series_context_builder.py  test_simulator_draft_quality.py  test_simulator_insights.py  test_simulator_models.py  test_simulator_routes.py  test_skill_transfer_service.py  test_synergy_service.py  test_team_evaluation_service.py  test_tournament_scorer.py
deepdraft/: index.html  package.json  (+1 more)
(+3256 files in other folders)
