[project]
name = "ban-teemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
