[project]
name = "ban-teemo"
version = "0.1.0"
description = "LoL Draft Assistant Backend - Real-time draft recommendations powered by LLM"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "groq>=0.4.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "leaguepedia-parser>=2.0.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ban_teemo"]
